--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -36,11 +36,13 @@ header img{ /*Un valor maximo a la imagen del logo*/
   color: $blanco;
   display: none;
   cursor: pointer;
-  font-size: 20px;
+  font-size: 30px;
+  margin-right: 20px;
 }
 
 .menu_movil{
   display: none;
+  background-color: $negro;
 }
 .menu_movil ul{
   display: flex;
@@ -50,7 +52,9 @@ header img{ /*Un valor maximo a la imagen del logo*/
 .menu_movil li>a{
   color: $blanco;
   font-size: 15px;
+  margin: 10px;
 }
+
 
 
 
@@ -86,32 +90,38 @@ main p {
   line-height: 68px;
 }
 main h1{
-  padding-top: 16%;
+  padding-top: 220px;
   font-weight: bold;
   font-size: 52px;
 }
 
+/*FOOTER*/
 
 footer{ /*Le indicamos estilos al footer y lo alineamos */
   background-color: $negro;
   color: $blanco;
-  height: 63px;
   display: flex;
   justify-content: space-around;
   align-items: center;
 }
 
-footer>div:nth-child(2){  /*alineamos los a de dentro del div del footer*/
-  display: flex;
+footer>*{
+  padding: 1.4em;
 }
 
-
-footer>div:nth-child(2)>a{  /*dejamos distancia entre las coockies ,privacidad y aviso legal*/
-  padding-inline: 15px;
-}
 
 
 /*RESPONSIVE*/
+
+
+/*1024-769*/
+@media screen and (max-width: 1024px) and (min-width: 769px){
+  .menu_ordenador li{
+    font-size: 12px;
+  }
+}
+
+/*768-320*/
 @media screen and (max-width: 768px) and (min-width: 320px){
   .menu_ordenador{
     display: none;
@@ -121,5 +131,31 @@ footer>div:nth-child(2)>a{  /*dejamos distancia entre las coockies ,privacidad y
   }
   .menu_movil.mostrar {
     display: block;
+  }
+
+  main a{ /*bajamos el tamaño 4px*/
+    font-size: 16px;
+    height: 43px;
+    width: 187px;
+  }
+
+  main p{
+    font-size: 16px;
+  }
+  main h1{
+    font-size: 41px;
+  }
+
+  footer{
+    display: grid;
+    text-align: center;
+  }
+
+  footer>*{
+    padding: 0.4em;
+  }
+
+  main a{
+    width: 125px;
   }
 }
