--- a/src/assets/styles/indexRegistrado.scss
+++ b/src/assets/styles/indexRegistrado.scss
@@ -130,16 +130,16 @@ footer>*{
   }
 
   main a{ /*bajamos el tamaño 4px*/
-    font-size: 23px;
+    font-size: 16px;
     height: 43px;
     width: 187px;
   }
 
   main p{
-    font-size: 23px;
+    font-size: 16px;
   }
   main h1{
-    font-size: 48px;
+    font-size: 41px;
   }
 
   footer{
@@ -150,4 +150,21 @@ footer>*{
   footer>*{
     padding: 0.4em;
   }
+}
+
+
+
+
+@media (prefers-color-scheme: light) {
+
+  /*HEADER*/
+  .section {background-color: $blanco;}
+  header .menu_ordenador ul li a {color: $negro}
+  .menu_hamburguesa {color: $negro}
+  header .menu_movil ul {background-color: $blanco}
+  .menu_movil li > a {color: $negro}
+
+  /*FOOTER*/
+  footer {background-color: $blanco;color: $negro}
+
 }
