organizacion de codigo, comentarios y pagina de error 404

--- a/src/assets/styles/imports/variables.scss
+++ b/src/assets/styles/imports/variables.scss
@@ -10,3 +10,4 @@ $hielo: #31AAA3;
 $psiquico: #FF61D3;
 $fuego: #FF7A30;
 $volador: linear-gradient(180deg, #31AAA3 0%, #31AAA3 54.16%, #888888 54.17%, #888888 100%);
+$rojo_pokeball: #FF3E32;
