--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -7,7 +7,6 @@
 header .menu_ordenador ul li a{ /*Le damos collor blanco a las redirecciones del nav*/
   color: $blanco;
 }
-
 header img{ /*Un valor maximo a la imagen del logo*/
   max-width: 120px;
 }
@@ -18,12 +17,10 @@ header img{ /*Un valor maximo a la imagen del logo*/
   margin-right: 15px;
   padding: 7px;
 }
-
 .menu_ordenador>ul li{  /*Ponemos todos los li en la misma linea y creamos separacion entre cada uno de ellos*/
   padding: 15px;
   display: inline-block;
 }
-
 .section{ /*Le damos color de fondo ,tamaño atodo lo que es el encabezado y lo alineamos con flex.*/
   height: 63px;
   display: flex;
@@ -31,7 +28,7 @@ header img{ /*Un valor maximo a la imagen del logo*/
   align-items: center;
   background-color: $negro;
 }
-.menu_hamburguesa{
+.menu_hamburguesa{ /*con el display none lo ocultamos para que no se muestre*/
   background-color: transparent;
   color: $blanco;
   display: none;
@@ -39,12 +36,11 @@ header img{ /*Un valor maximo a la imagen del logo*/
   font-size: 30px;
   margin-right: 20px;
 }
-
-.menu_movil{
+.menu_movil{ /*Hacemos lo mismo con el menu mocil para que no se muestre*/
   display: none;
   background-color: $negro;
 }
-.menu_movil ul{
+.menu_movil ul{ /*Le damos estilo a el menu movil*/
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -56,8 +52,6 @@ header img{ /*Un valor maximo a la imagen del logo*/
 }
 
 
-
-
 /*MAIN*/
 
 main{ /*adaptamos el ancho y predeterminamos el ancho y metemos imagen de fondo con sus diferentes atributos*/
@@ -67,13 +61,10 @@ main{ /*adaptamos el ancho y predeterminamos el ancho y metemos imagen de fondo 
   background-size: cover;
   background-position: center;
 }
-
-
 main>*{
   display: flex;
   justify-content: center;
 }
-
 main a{
   color: $blanco;
   align-items: center;
@@ -95,6 +86,7 @@ main h1{
   font-size: 52px;
 }
 
+
 /*FOOTER*/
 
 footer{ /*Le indicamos estilos al footer y lo alineamos */
@@ -104,66 +96,86 @@ footer{ /*Le indicamos estilos al footer y lo alineamos */
   justify-content: space-around;
   align-items: center;
 }
-
 footer>*{
   padding: 1.4em;
 }
 
 
 
-/*RESPONSIVE*/
+/* APLICO ESTILO A LA BARRA DE SCROLL */
+body::-webkit-scrollbar {
+  width: 17px;
+}
+body::-webkit-scrollbar-track {
+  background: $negro;
+}
+body::-webkit-scrollbar-thumb {
+  background-color: $blanco;
+  border-radius: 20px;
+  border: 5px solid $negro;
+}
 
+
+
+/*RESPONSIVE*/
 
 /*1024-769*/
 @media screen and (max-width: 1024px) and (min-width: 769px){
-  .menu_ordenador li{
+  .menu_ordenador li{ /* reducimos el tamaño de la fuente en el encabezado */
     font-size: 12px;
   }
 }
 
+
 /*768-0*/
 @media screen and (max-width: 768px) and (min-width: 0px){
-  .menu_ordenador{
+
+  /*HEADER*/
+  .menu_ordenador{ /* ocultamos el menu de ordenador */
     display: none;
   }
-  .menu_hamburguesa{
+  .menu_hamburguesa{ /*y ahora mostramos el menu hambuerguqesa que va a ocupar el lugar del otro encabezado*/
     display: block;
   }
-  .menu_movil.mostrar {
+  .menu_movil.mostrar { /*cuando a la clase manu_movil se le añada la clase mostrar tambien se mostrara lo que es el menu_movil
+                          de esta forma lo que haremos es que al pulsar en el boton de menu_hamburguesa se le añada a menu_movil la clase mostrar
+                          (archivo script, main.js)*/
     display: block;
   }
 
+
+  /*MAIN*/
   main a{ /*bajamos el tamaño 4px*/
     font-size: 16px;
     height: 43px;
     width: 187px;
   }
-
   main p{
     font-size: 16px;
   }
   main h1{
     font-size: 41px;
   }
+  main a{
+    width: 125px;
+  }
 
+
+  /*FOOTER*/
   footer{
     display: grid;
     text-align: center;
   }
-
   footer>*{
     padding: 0.4em;
   }
 
-  main a{
-    width: 125px;
-  }
 }
 
 
 
 
-@media (prefers-color-scheme: light) {
+@media (prefers-color-scheme: light) {  /* lo que hacemos es ver si esta el dispositivo en modo claro y aplicamos los siguientes estilos */
 
   /*HEADER*/
   .section {background-color: $blanco;}
@@ -176,4 +188,13 @@ footer>*{
   /*FOOTER*/
   footer {background-color: $blanco;color: $negro}
 
+
+  /*BARRA SCROLL*/
+  body::-webkit-scrollbar-track {
+    background: $blanco;
+  }
+  body::-webkit-scrollbar-thumb {
+    background-color: $negro;
+    border: 5px solid $blanco;
+  }
 }
