--- a/src/assets/styles/indexRegistrado.scss
+++ b/src/assets/styles/indexRegistrado.scss
@@ -5,7 +5,6 @@
 header .menu_ordenador ul li a{ /*Le damos collor blanco a las redirecciones del nav*/
   color: $blanco;
 }
-
 header img{ /*Un valor maximo a la imagen del logo*/
   max-width: 120px;
 }
@@ -13,12 +12,10 @@ header img{ /*Un valor maximo a la imagen del logo*/
   margin-left: 141px;
   font-size: 22px;
 }
-
 .menu_ordenador>ul li{  /*Ponemos todos los li en la misma linea y creamos separacion entre cada uno de ellos*/
   padding: 15px;
   display: inline-block;
 }
-
 .section{ /*Le damos color de fondo ,tamaño atodo lo que es el encabezado y lo alineamos con flex.*/
   height: 63px;
   display: flex;
@@ -34,7 +31,6 @@ header img{ /*Un valor maximo a la imagen del logo*/
   font-size: 30px;
   margin-right: 20px;
 }
-
 .menu_movil{
   display: none;
   background-color: black;
@@ -50,6 +46,8 @@ header img{ /*Un valor maximo a la imagen del logo*/
   margin: 10px;
 }
 
+
+
 /*MAIN*/
 
 main{ /*adaptamos el ancho y predeterminamos el ancho y metemos imagen de fondo con sus diferentes atributos*/
@@ -59,13 +57,10 @@ main{ /*adaptamos el ancho y predeterminamos el ancho y metemos imagen de fondo 
   background-size: cover;
   background-position: center;
 }
-
-
 main>*{
   display: flex;
   justify-content: center;
 }
-
 main a{
   color: $blanco;
   align-items: center;
@@ -97,7 +92,6 @@ footer{ /*Le indicamos estilos al footer y lo alineamos */
   justify-content: space-around;
   align-items: center;
 }
-
 footer>*{
   padding: 1.4em;
 }
@@ -105,20 +99,21 @@ footer>*{
 
 /*RESPONSIVE*/
 
-
 /*1024-769*/
 @media screen and (max-width: 1024px) and (min-width: 769px){
+  /*HEADER*/
   .menu_ordenador li{
     font-size: 12px;
   }
-
   .ultimoLi{
     margin-left: 146px;
   }
 }
 
 /*768-0*/
-@media screen and (max-width: 768px) and (min-width: 0px){
+@media screen and (max-width: 768px) and (min-width: 0px){ç
+
+  /*HEADER*/
   .menu_ordenador{
     display: none;
   }
@@ -129,12 +124,13 @@ footer>*{
     display: block;
   }
 
+
+  /*MAIN*/
   main a{ /*bajamos el tamaño 4px*/
     font-size: 16px;
     height: 43px;
     width: 187px;
   }
-
   main p{
     font-size: 16px;
   }
@@ -142,11 +138,12 @@ footer>*{
     font-size: 41px;
   }
 
+
+  /**/FOOTER
   footer{
     display: grid;
     text-align: center;
   }
-
   footer>*{
     padding: 0.4em;
   }
@@ -154,7 +151,7 @@ footer>*{
 
 
 
-
+/*MODO CLARO*/
 @media (prefers-color-scheme: light) {
 
   /*HEADER*/
@@ -163,6 +160,7 @@ footer>*{
   .menu_hamburguesa {color: $negro}
   header .menu_movil ul {background-color: $blanco}
   .menu_movil li > a {color: $negro}
+
 
   /*FOOTER*/
   footer {background-color: $blanco;color: $negro}
