organizacion de codigo y comentarios

--- a/src/assets/styles/error_404.scss
+++ b/src/assets/styles/error_404.scss
@@ -7,7 +7,6 @@
 header .menu_ordenador ul li a{ /*Le damos collor blanco a las redirecciones del nav*/
   color: $blanco;
 }
-
 header img{ /*Un valor maximo a la imagen del logo*/
   max-width: 120px;
 }
@@ -18,12 +17,10 @@ header img{ /*Un valor maximo a la imagen del logo*/
   margin-right: 15px;
   padding: 7px;
 }
-
 .menu_ordenador>ul li{  /*Ponemos todos los li en la misma linea y creamos separacion entre cada uno de ellos*/
   padding: 15px;
   display: inline-block;
 }
-
 .section{ /*Le damos color de fondo ,tamaño atodo lo que es el encabezado y lo alineamos con flex.*/
   height: 63px;
   display: flex;
@@ -39,7 +36,6 @@ header img{ /*Un valor maximo a la imagen del logo*/
   font-size: 30px;
   margin-right: 20px;
 }
-
 .menu_movil{
   display: none;
   background-color: $negro;
@@ -57,7 +53,6 @@ header img{ /*Un valor maximo a la imagen del logo*/
 
 
 
-
 /*MAIN*/
 
 main{ /*adaptamos el ancho y predeterminamos el ancho y metemos imagen de fondo con sus diferentes atributos*/
@@ -67,14 +62,12 @@ main{ /*adaptamos el ancho y predeterminamos el ancho y metemos imagen de fondo 
   background-size: cover;
   background-position: center;
 }
-
 .caja{
   text-align: -webkit-center;
   padding-top: 280px;
 }
-
 main > .caja > h1 {
-  display: table-cell;
+  display: table-cell; /*lo utilizo para centrarlo en medio del fondo de color*/
   vertical-align: middle;
   height: 109px;
   background-color: $rojo_pokeball;
@@ -83,15 +76,22 @@ main > .caja > h1 {
   width: 250px;
   font-size: 48px;
 }
+.pokeball{
+  max-width: 90px;
+  animation: vuelta 7s infinite linear; /*animacion*/
+  margin-top: -100px;
+}
+
+
+
+/*BARRA SCROLL*/
 
 body::-webkit-scrollbar {
   width: 17px;
 }
-
 body::-webkit-scrollbar-track {
   background: $negro;
 }
-
 body::-webkit-scrollbar-thumb {
   background-color: $blanco;
   border-radius: 20px;
@@ -99,12 +99,7 @@ body::-webkit-scrollbar-thumb {
 }
 
 
-.pokeball{
-  max-width: 90px;
-  animation: vuelta 7s infinite linear;
-  margin-top: -100px;
-}
-
+/*Movimiento de vuelta que aplicamos a la pokeball*/
 @keyframes vuelta{
   from {
     transform: rotate(0deg)  translate(250px) rotate(0deg);
@@ -124,37 +119,49 @@ footer{ /*Le indicamos estilos al footer y lo alineamos */
   justify-content: space-around;
   align-items: center;
 }
-
 footer>*{
   padding: 1.4em;
 }
 
 
+/* APLICO ESTILO A LA BARRA DE SCROLL */
+body::-webkit-scrollbar {
+  width: 17px;
+}
+body::-webkit-scrollbar-track {
+  background: $negro;
+}
+body::-webkit-scrollbar-thumb {
+  background-color: $blanco;
+  border-radius: 20px;
+  border: 5px solid $negro;
+}
+
 
 /*RESPONSIVE*/
 
-
 /*1024-769*/
 @media screen and (max-width: 1024px) and (min-width: 769px){
+
+  /*HEADER*/
   .menu_ordenador li{
     font-size: 12px;
   }
 
+
+  /*MAIN*/
   .caja{
     padding-top: 300px;
   }
-
   main > .caja > h1 {
     height: 84px;
     width: 225px;
     font-size: 42px;
   }
-
-  .pokeball{
+  .pokeball{ /*aumentamos tiempo ya que el recorrido ahor va a ser menor*/
     animation: vuelta 6s infinite linear;
   }
-
-  @keyframes vuelta{
+  @keyframes vuelta{ /*modificamos el recorrido*/
     from {
       transform: rotate(0deg)  translate(200px) rotate(0deg);
     }
@@ -166,6 +173,8 @@ footer>*{
 
 /*768-0*/
 @media screen and (max-width: 768px) and (min-width: 0px){
+
+  /*HEADER*/
   .menu_ordenador{
     display: none;
   }
@@ -176,26 +185,22 @@ footer>*{
     display: block;
   }
 
-
+  /*MAIN*/
   .pokeball{
     animation: vuelta 3.2s infinite linear;
   }
-
   .caja{
     padding-top: 170px;
   }
-
   main > .caja > h1 {
     height: 64px;
     width: 209px;
     font-size: 31px;
   }
-
   .pokeball{
     margin-top: 130px;
   }
-
-  @keyframes vuelta{
+  @keyframes vuelta{ /*modificamos el recorrido*/
     from {
       transform: rotate(0deg)  translate(90px) rotate(0deg);
     }
@@ -205,12 +210,11 @@ footer>*{
   }
 
 
-
+  /*FOOTER*/
   footer{
     display: grid;
     text-align: center;
   }
-
   footer>*{
     padding: 0.4em;
   }
