--- a/src/assets/styles/iniciarSesion.scss
+++ b/src/assets/styles/iniciarSesion.scss
@@ -7,7 +7,6 @@
 header .menu_ordenador ul li a{ /*Le damos collor blanco a las redirecciones del nav*/
   color: $blanco;
 }
-
 header img{ /*Un valor maximo a la imagen del logo*/
   max-width: 120px;
 }
@@ -18,12 +17,10 @@ header img{ /*Un valor maximo a la imagen del logo*/
   margin-right: 15px;
   padding: 7px;
 }
-
 .menu_ordenador>ul li{  /*Ponemos todos los li en la misma linea y creamos separacion entre cada uno de ellos*/
   padding: 15px;
   display: inline-block;
 }
-
 .section{ /*Le damos color de fondo ,tamaño atodo lo que es el encabezado y lo alineamos con flex.*/
   height: 63px;
   display: flex;
@@ -39,7 +36,6 @@ header img{ /*Un valor maximo a la imagen del logo*/
   font-size: 30px;
   margin-right: 20px;
 }
-
 .menu_movil{
   display: none;
   background-color: $negro;
@@ -54,7 +50,6 @@ header img{ /*Un valor maximo a la imagen del logo*/
   font-size: 15px;
   margin: 10px;
 }
-
 
 
 /*MAIN*/
@@ -72,18 +67,15 @@ label{
 main div>h1{
   text-align: center;
 }
-
 section{
   width: 100%;
   height: 100%;
 }
-
-.colocar{
+.colocar{ /*Colocamos t0d0 el contecido*/
   width: 100%;
   padding-top: 100px;
 }
-
-.caja{
+.caja{ /*Es donde vamos a tener metido nuestro formulario*/
   position: relative;
   border-radius: 10px;
   background: rgba(255, 255, 255,.65);
@@ -105,12 +97,10 @@ input[type=name],input[type=password]{
   height: 27px;
   margin: 11px auto 0;
 }
-
 input[type=checkbox]{
   width: 13px;
 }
-
-button{
+button{ /* boton de iniciar sesion */
   background-color: $naranja_iniciarSesion;
   color: $negro;
   border: none;
@@ -161,7 +151,7 @@ input{
   font-weight: bold;
 }
 
-/*FOOTER*/
+
 
 /*FOOTER*/
 
@@ -172,13 +162,27 @@ footer{ /*Le indicamos estilos al footer y lo alineamos */
   justify-content: space-around;
   align-items: center;
 }
-
 footer>*{
   padding: 1.4em;
 }
 
 
+/* APLICO ESTILO A LA BARRA DE SCROLL */
+body::-webkit-scrollbar {
+  width: 17px;
+}
+body::-webkit-scrollbar-track {
+  background: $negro;
+}
+body::-webkit-scrollbar-thumb {
+  background-color: $blanco;
+  border-radius: 20px;
+  border: 5px solid $negro;
+}
+
+
 @media screen and (max-width: 1024px) and (min-width: 769px){
+  /*HEADER*/
   .menu_ordenador li{
     font-size: 12px;
   }
@@ -186,6 +190,7 @@ footer>*{
 
 /*768-0*/
 @media screen and (max-width: 768px) and (min-width: 0px){
+  /*HEADER*/
   .menu_ordenador{
     display: none;
   }
@@ -197,11 +202,11 @@ footer>*{
   }
 
 
+  /*FOOTER*/
   footer{
     display: grid;
     text-align: center;
   }
-
   footer>*{
     padding: 0.4em;
   }
