--- a/src/assets/styles/preguntasFrecuentes.scss
+++ b/src/assets/styles/preguntasFrecuentes.scss
@@ -5,7 +5,6 @@
 header .menu_ordenador ul li a{ /*Le damos collor blanco a las redirecciones del nav*/
   color: $blanco;
 }
-
 header img{ /*Un valor maximo a la imagen del logo*/
   max-width: 120px;
 }
@@ -13,12 +12,10 @@ header img{ /*Un valor maximo a la imagen del logo*/
   margin-left: 141px;
   font-size: 22px;
 }
-
 .menu_ordenador>ul li{  /*Ponemos todos los li en la misma linea y creamos separacion entre cada uno de ellos*/
   padding: 15px;
   display: inline-block;
 }
-
 .section{ /*Le damos color de fondo ,tamaño atodo lo que es el encabezado y lo alineamos con flex.*/
   height: 63px;
   display: flex;
@@ -34,7 +31,6 @@ header img{ /*Un valor maximo a la imagen del logo*/
   font-size: 30px;
   margin-right: 20px;
 }
-
 .menu_movil{
   display: none;
   background-color: black;
@@ -50,6 +46,8 @@ header img{ /*Un valor maximo a la imagen del logo*/
   margin: 10px;
 }
 
+
+
 /*MAIN*/
 
 main{
@@ -62,24 +60,19 @@ main{
   display: block;
   align-items: center;
 }
-
-
 main>section{
   padding: 1.8em;
   display: flex;
   justify-content: space-around;
   width: 100%;
 }
-
-
-.texto_grande{
+.texto_grande{ /*Con esto conseguimos un mejor diseño ya que utilizamos el primero de una columna y el ultimo de la otra*/
   width: 148%;
   border: solid;
 }
 main>p{
   font-weight: 100;
 }
-
 main>section>div{
   display: block;
   font-family: Inter;
@@ -87,13 +80,9 @@ main>section>div{
   font-weight: bold;
   font-size: 17px;
   line-height: 17px;
-
   color: $blanco;
-
   padding: 4.2em;
 }
-
-
 main>section>div>h3{
   font-family: Inter;
   font-style: normal;
@@ -102,11 +91,8 @@ main>section>div>h3{
   line-height: 28px;
   text-decoration-line: underline;
   padding-bottom: 15px;
-
   color: $blanco;
-
 }
-
 
 
 /*FOOTER*/
@@ -118,41 +104,55 @@ footer{ /*Le indicamos estilos al footer y lo alineamos */
   justify-content: space-around;
   align-items: center;
 }
-
 footer>*{
   padding: 1.4em;
 }
 
 
-/*RESPONSIVE*/
 
+/* APLICO ESTILO A LA BARRA DE SCROLL */
+body::-webkit-scrollbar {
+  width: 17px;
+}
+body::-webkit-scrollbar-track {
+  background: $negro;
+}
+body::-webkit-scrollbar-thumb {
+  background-color: $blanco;
+  border-radius: 20px;
+  border: 5px solid $negro;
+}
+
+
+/*RESPONSIVE*/
 
 /*1024-769*/
 @media screen and (max-width: 1024px) and (min-width: 769px){
+
+  /*HEADER*/
   .menu_ordenador li{
     font-size: 12px;
   }
-
   .ultimoLi{
     margin-left: 146px;
   }
 
+  /*MAIN*/
   main>section {
     padding: 0.7em;
   }
-
   main>section>div{
     padding: 2em;
   }
-
   main>section{
     padding: 3em;
   }
-
 }
 
 /*768-0*/
 @media screen and (max-width: 768px) and (min-width: 0px){
+
+  /*HEADER*/
   .menu_ordenador{
     display: none;
   }
@@ -163,13 +163,24 @@ footer>*{
     display: block;
   }
 
+
+  /*MAIN*/
   section{
     display: block;
   }
   .texto_grande{
     border: none;
   }
+  main>section{
+    display: block;
+    padding: 0;
+  }
+  .texto_grande{
+    width: 100%;
+  }
 
+
+  /*FOOTER*/
   footer{
     display: grid;
     text-align: center;
@@ -177,14 +188,6 @@ footer>*{
 
   footer>*{
     padding: 0.4em;
-  }
-
-  main>section{
-    display: block;
-    padding: 0;
-  }
-  .texto_grande{
-    width: 100%;
   }
 
 }
