--- a/src/assets/styles/noticias.scss
+++ b/src/assets/styles/noticias.scss
@@ -5,7 +5,6 @@
 header .menu_ordenador ul li a{ /*Le damos collor blanco a las redirecciones del nav*/
   color: $blanco;
 }
-
 header img{ /*Un valor maximo a la imagen del logo*/
   max-width: 120px;
 }
@@ -13,12 +12,10 @@ header img{ /*Un valor maximo a la imagen del logo*/
   margin-left: 141px;
   font-size: 22px;
 }
-
 .menu_ordenador>ul li{  /*Ponemos todos los li en la misma linea y creamos separacion entre cada uno de ellos*/
   padding: 15px;
   display: inline-block;
 }
-
 .section{ /*Le damos color de fondo ,tamaño atodo lo que es el encabezado y lo alineamos con flex.*/
   height: 63px;
   display: flex;
@@ -34,7 +31,6 @@ header img{ /*Un valor maximo a la imagen del logo*/
   font-size: 30px;
   margin-right: 20px;
 }
-
 .menu_movil{
   display: none;
   background-color: black;
@@ -50,6 +46,7 @@ header img{ /*Un valor maximo a la imagen del logo*/
   margin: 10px;
 }
 
+
 /*MAIN*/
 
 main{
@@ -59,7 +56,6 @@ main{
   background-size: cover;
   background-position: center;
 }
-
 main>section>img{
   width: 351px;
 }
@@ -102,7 +98,6 @@ main > section:last-child{
 
 
 /*FOOTER*/
-
 footer{ /*Le indicamos estilos al footer y lo alineamos */
   background-color: $negro;
   color: $blanco;
@@ -110,24 +105,41 @@ footer{ /*Le indicamos estilos al footer y lo alineamos */
   justify-content: space-around;
   align-items: center;
 }
-
 footer>*{
   padding: 1.4em;
 }
 
 
-/*RESPONSIVE*/
+/* APLICO ESTILO A LA BARRA DE SCROLL */
+body::-webkit-scrollbar {
+  width: 17px;
+}
+body::-webkit-scrollbar-track {
+  background: $negro;
+}
+body::-webkit-scrollbar-thumb {
+  background-color: $blanco;
+  border-radius: 20px;
+  border: 5px solid $negro;
+}
 
+
+
+/*RESPONSIVE*/
 
 /*1024-769*/
 @media screen and (max-width: 1024px) and (min-width: 769px){
+
+  /*HEADER*/
   .menu_ordenador li{
     font-size: 12px;
   }
-
   .ultimoLi{
     margin-left: 146px;
   }
+
+
+  /*MAIN*/
   main>section>img{
     width: 255px;
   }
@@ -139,6 +151,8 @@ footer>*{
 
 /*768-0*/
 @media screen and (max-width: 768px) and (min-width: 0px){
+
+  /*HEADER*/
   .menu_ordenador{
     display: none;
   }
@@ -150,8 +164,7 @@ footer>*{
   }
 
 
-
-
+  /*MAIN*/
   main>section{
     display: grid;
   }
@@ -169,15 +182,13 @@ footer>*{
   }
 
 
-
-
-
+  /*FOOTER*/
   footer{
     display: grid;
     text-align: center;
   }
-
   footer>*{
     padding: 0.4em;
   }
+
 }
