--- a/src/assets/styles/pokemon.scss
+++ b/src/assets/styles/pokemon.scss
@@ -5,7 +5,6 @@
 header .menu_ordenador ul li a{ /*Le damos collor blanco a las redirecciones del nav*/
   color: $blanco;
 }
-
 header img{ /*Un valor maximo a la imagen del logo*/
   max-width: 120px;
 }
@@ -13,12 +12,10 @@ header img{ /*Un valor maximo a la imagen del logo*/
   margin-left: 141px;
   font-size: 22px;
 }
-
 .menu_ordenador>ul li{  /*Ponemos todos los li en la misma linea y creamos separacion entre cada uno de ellos*/
   padding: 15px;
   display: inline-block;
 }
-
 .section{ /*Le damos color de fondo ,tamaño atodo lo que es el encabezado y lo alineamos con flex.*/
   height: 63px;
   display: flex;
@@ -34,7 +31,6 @@ header img{ /*Un valor maximo a la imagen del logo*/
   font-size: 30px;
   margin-right: 20px;
 }
-
 .menu_movil{
   display: none;
   background-color: black;
@@ -50,13 +46,14 @@ header img{ /*Un valor maximo a la imagen del logo*/
   margin: 10px;
 }
 
+
+
 /*MAIN*/
 
 main{ /*adaptamos el ancho y predeterminamos el ancho y metemos imagen de fondo con sus diferentes atributos*/
   width: 100%;
   background-color: rgba(24, 95, 202, 0.28);
 }
-
 main>a{
   padding: 23px 0px 18px 23px;
 }
@@ -73,7 +70,6 @@ main>h1{
   padding-top: 4px;
   margin: 0 auto 30px;
 }
-
 section>img{
   max-height: 272px;
   width: auto;
@@ -92,7 +88,6 @@ section{
   font-size: 20px;
   width: 419px;
 }
-
 .caja{
   display: flex;
   justify-content: space-around;
@@ -141,13 +136,12 @@ section{
   color: $blanco;
   font-size: 20px;
 }
-
 .debilidadesYtipos p{
   border-radius: 5px;
   width: 97px;
   height: 29px;
 }
-
+/*APLICAMOS EL COLOR PARA CADA CUADRO CON SU DEBILIDAD O TIPO*/
 .fuego{
   background: #FF7A30;
 }
@@ -185,15 +179,29 @@ footer>*{
 }
 
 
-/*RESPONSIVE*/
+/* APLICO ESTILO A LA BARRA DE SCROLL */
+body::-webkit-scrollbar {
+  width: 17px;
+}
+body::-webkit-scrollbar-track {
+  background: $negro;
+}
+body::-webkit-scrollbar-thumb {
+  background-color: $blanco;
+  border-radius: 20px;
+  border: 5px solid $negro;
+}
 
+
+/*RESPONSIVE*/
 
 /*1024-769*/
 @media screen and (max-width: 1024px) and (min-width: 769px){
+
+  /*HEADER*/
   .menu_ordenador li{
     font-size: 12px;
   }
-
   .ultimoLi{
     margin-left: 146px;
   }
@@ -201,6 +209,8 @@ footer>*{
 
 /*768-0*/
 @media screen and (max-width: 768px) and (min-width: 0px){
+
+  /*HEADER*/
   .menu_ordenador{
     display: none;
   }
@@ -212,7 +222,7 @@ footer>*{
   }
 
 
-
+  /*MAIN*/
   main>section{
     display: grid;
   }
@@ -238,13 +248,11 @@ footer>*{
   }
 
 
-
-
+  /*FOOTER*/
   footer{
     display: grid;
     text-align: center;
   }
-
   footer>*{
     padding: 0.4em;
   }
