--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -65,6 +65,9 @@ main>*{
   display: flex;
   justify-content: center;
 }
+a.boton_principal:hover, a.boton_principal:active{ /*Cuando estamos encima se disminuira el tamaño*/
+  font-size: 150%;
+}
 main a{
   color: $blanco;
   align-items: center;
@@ -85,6 +88,7 @@ main h1{
   font-weight: bold;
   font-size: 52px;
 }
+
 
 
 /*FOOTER*/
